# unified-domain-client

./: .cursorignore  .cursorrules  .dependency-matrix.json  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  QUALITY_GATE_BYPASS_AUDIT.md  README.md  basedpyright-baseline-notes.md  buildspec.aws.yaml  cloudbuild.yaml  coverage.xml  pyproject.toml  pyrightconfig.json  unified_domain_client_audit_2026_03_13.md
.basedpyright/: baseline.json
.cursor/: rules
.cursor/scripts/: check-import-patterns.py
.github/workflows/: agent-audit.yml  major-bump-issue-handler.yml  quality-gates-simple.yml  quality-gates.yml  request-major-bump.yml  semver-agent.yml  staging-lock-check.yml  update-dependency-version.yml  version-bump.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  TESTING.md
docs/.temp-audit/: COVERAGE_PLAN.md  LIBRARY_HARDENING.md  TECHNICAL_DEBT.md
docs/specs/: PLANS_ALIGNMENT.md  README.md
scripts/: pre-flight-audit.sh  quality-gates.sh  quickmerge.sh  quickmerge.sh.backup  setup-workspace.sh  setup.sh
tests/: __init__.py  conftest.py
tests/integration/: test_domain_client_storage.py  test_library_deps_integration.py
tests/unit/: test_clients.py  test_clients_simple.py  test_cloud_data_provider.py  test_coverage_boost_udc.py  test_data_completion.py  test_date_filter_service.py  test_date_validation.py  test_domain_validation.py  test_event_logging.py  test_factories.py  test_imports.py  test_imports_part2.py  test_instruction_schema.py  test_instrument_date_filter.py  test_instrument_key.py  test_readers.py  test_standardized_service.py  test_t3_ic_contracts.py  test_timestamp_validation.py  test_udc_instruments_methods.py  test_validation.py
unified_domain_client/: __init__.py  artifact_store.py  cloud_data_provider.py  cloud_target.py  data_completion.py  date_validation.py  factories.py  id_conventions.py  instrument_date_filter.py  lookback_constants.py  market_category.py  standardized_service.py  timestamp_validation.py  validation.py
unified_domain_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
unified_domain_client/catalog/: __init__.py  bq_catalog.py  glue_catalog.py
unified_domain_client/clients/: __init__.py  base.py  execution.py  features.py  instruments.py  liquidity.py  market_data.py  ml.py  pnl.py  positions.py  risk.py  strategy.py
unified_domain_client/models/: __init__.py  validation.py
unified_domain_client/paths/: __init__.py  registry.py
unified_domain_client/readers/: __init__.py  athena.py  base.py  bq_external.py  direct.py  factory.py
unified_domain_client/schemas/: __init__.py  config_schema.py  instruction_schema.py  instrument_key.py
unified_domain_client/sports/: __init__.py  features_client.py  fixtures_client.py  mappings_client.py  odds_client.py  tick_data_client.py
unified_domain_client/writers/: __init__.py  base.py  direct.py  factory.py
unified_domain_services/: __init__.py  clients.py  cloud_data_provider.py  date_validation.py  factories.py  instrument_date_filter.py  standardized_service.py  validation.py
unified_domain_services/clients/: __init__.py  base.py  execution.py  factory.py  features.py  instruments.py  market_data.py
unified_domain_services/schemas/: __init__.py  config_schema.py  instruction_schema.py  instrument_key.py
