[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "unified-domain-services"
version = "1.0.0"
description = "Trading domain services - clients, validation, cloud service wrappers"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas>=2.3.0,<3.0.0",
    "pyarrow>=23.0.0,<24.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "unified-cloud-services>=2.0.0,<3.0.0",
    "unified-config-interface>=1.0.0,<2.0.0",
    "unified-events-interface>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "pytest-timeout>=2.2.0,<3.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "ruff==0.15.0",
    "pandas-stubs>=2.2.0,<3.0.0",
    "basedpyright>=1.20.0,<2.0.0",
    "pyright>=1.1.390,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["unified_domain_services*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line too long handled by formatter
mccabe = {max-complexity = 10}

[tool.ruff.format]
quote-style = "double"
indent-style = "space" 
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--cov=unified_domain_services",
    "--cov-report=term-missing",
    "--cov-fail-under=35",
    "--timeout=300",
]

[tool.basedpyright]
exclude = ["build", "dist", "deps"]
typeCheckingMode = "standard"
# Treat pyright warnings as errors (codex strict type checking)
reportAny = "error"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportOptionalMemberAccess = "error"
reportOptionalSubscript = "error"
reportGeneralTypeIssues = "error"


[tool.coverage.report]
fail_under = 35  # Minimum coverage
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]