[build-system]
requires = [
    "setuptools>=75,<82",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.uv.sources.unified-api-contracts]
path = "../unified-api-contracts"

[tool.uv.sources.unified-cloud-interface]
path = "../unified-cloud-interface"

[tool.uv.sources.unified-config-interface]
path = "../unified-config-interface"

[tool.uv.sources.unified-internal-contracts]
path = "../unified-internal-contracts"

[tool.uv.sources.unified-ml-interface]
path = "../unified-ml-interface"

[tool.uv.sources.unified-trading-library]
path = "../unified-trading-library"

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "unified_domain_client",
    "unified_domain_client.*",
    # Step 1 of rename: unified_domain_services/ is the new canonical import path.
    # Step 2 (T3 STEP C): remove unified_domain_client/ after all 14 services migrated.
    "unified_domain_services",
    "unified_domain_services.*",
]
exclude = [
    "tests*",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "G",
    "C90",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    "deps",
    ".venv",
    ".git",
    "build",
    "dist",
    "__pycache__",
]
markers = [
    "integration: mark test as integration (deselect with -m 'not integration')",
    "smoke: mark test as smoke test",
]

[tool.basedpyright]
exclude = [
    "build",
    "dist",
    "deps",
]
reportAny = "error"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportOptionalMemberAccess = "error"
reportOptionalSubscript = "error"
reportGeneralTypeIssues = "error"
reportMissingTypeStubs = false
extraPaths = [
    "../unified-config-interface",
    "../unified-internal-contracts",
    "../unified-events-interface",
    "../unified-cloud-interface",
    "../unified-ml-interface",
    "../unified-trading-library",
]

[tool.coverage.run]
parallel = true
concurrency = [
    "multiprocessing",
    "thread",
]
source = [
    "unified_domain_client",
]

[tool.coverage.report]
fail_under = 70

[tool.quality-gates]
repo_arch_tier = "3"

[project]
name = "unified-domain-client"
version = "0.1.54"
description = "Trading domain services - clients, validation, cloud service wrappers"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas>=2.3.0,<3.0.0",
    "pyarrow>=23.0.0,<24.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "unified-api-contracts>=0.1.0,<1.0.0",
    "unified-cloud-interface[gcp]>=0.1.0,<1.0.0",
    "unified-config-interface>=0.3.0,<1.0.0",
    "unified-internal-contracts>=0.1.0,<1.0.0",
    "unified-ml-interface>=0.1.0,<1.0.0",
    "unified-trading-library>=0.4.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-mock<4.0.0,>=3.15.0",
    "pytest-asyncio>=0.25.0,<2.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    "pytest-xdist>=3.6.0,<4.0.0",
    "ruff==0.15.0",
    "pandas-stubs>=2.2.0,<3.0.0",
    "basedpyright>=1.21.0,<2.0.0",
    "pyright>=1.1.390,<2.0.0",
    "pip-audit>=2.7.0,<3.0.0",
    "bandit>=1.7.0,<2.0.0",
]
